--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
   <display-name>Archetype Created Web Application</display-name>
   <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring.xml,classpath:spring-quartz.xml<!-- ,classpath:spring-mybatis.xml --></param-value>
+        <param-value>classpath:spring.xml,classpath:spring-quartz.xml,classpath:spring-mybatis.xml</param-value>
         <!-- ,classpath:spring-quartz.xml 用于做任务调度 任务定时都可以 -->
     </context-param>
     <context-param>
