--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 		    <artifactId>pagehelper</artifactId>
 		    <version>4.0.0</version>
 		</dependency>
+		<dependency>  
+		    <groupId>com.github.jsqlparser</groupId>  
+		    <artifactId>jsqlparser</artifactId>  
+		    <version>0.9.1</version>  
+		</dependency>  
 
 		<!-- mysql -->
 		<dependency>
